# home-agent

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  QWEN.md  README.md  main.py  pyproject.toml  verify.sh
.claude/commands/: api-design-principles.md  architecture.md  brainstorming.md  debugging-strategies.md  doc-coauthoring.md  implement-step.md  lint-and-validate.md  phase-review.md  security-auditor.md
.rovodev/subagents/: phase_reviewer.md  planner.md
deployment/: README.md  docker-compose.yml
docs/LLM/: AGENTS.md  API.md  ARCHITECT.md  DETAILED_PLAN.md  IMPLEMENTATION.md  MEMORY.md  api.yaml  implementation.yaml  memory.yaml  templates.md
docs/LLM/other/: tool_control.md  workflow_feedback.md
docs/LLM/plans/: step-1.10.rovo-plan.yaml  step-1.3.rovo-plan.yaml  step-1.4.rovo-plan.yaml  step-1.5.rovo-plan.yaml  step-1.6.rovo-plan.yaml  step-1.7.rovo-plan.yaml  step-1.8.rovo-plan.yaml  step-1.9.rovo-plan.yaml  step-1.9b.rovo-plan.yaml  step-2.1.rovo-plan.yaml  step-2.2.rovo-plan.yaml  step-2.3.rovo-plan.yaml  step-2.4.rovo-plan.yaml  step-2.5.rovo-plan.yaml  step-2.6.rovo-plan.yaml  step-2.7.rovo-plan.yaml  step-2.7b.rovo-plan.yaml  step-2.review.rovo-plan.yaml  step-3.2.rovo-plan.yaml  step-3.3.rovo-plan.yaml  step-3.4.rovo-plan.yaml  step-3.review.rovo-plan.yaml  step-4.1.rovo-plan.yaml  step-4.3.rovo-plan.yaml  step-4.4.rovo-plan.yaml  step-4.4b.rovo-plan.yaml
docs/LLM/plans/user-experience/: ux-profile-and-confirmation.md
docs/LLM/reviews/: phase-1-2-review.md  phase-3-review.md  phase-4-review.md
mcp_servers/jellyseerr/: main.py
mcp_servers/qwen3_asr/: Dockerfile  requirements.txt  server.py
src/home_agent/: agent.py  bot.py  config.py  db.py  formatting.py  history.py  main.py  profile.py  prompts.py
src/home_agent/mcp/: __init__.py  guarded_toolset.py  registry.py  servers.py
src/home_agent/models/: __init__.py  retry_model.py
src/home_agent/tools/: __init__.py  profile_tools.py  telegram_tools.py
tests/: conftest.py  test_agent.py  test_bot.py  test_config.py  test_db.py  test_docker.py  test_formatting.py  test_guarded_toolset.py  test_history.py  test_integration.py  test_main.py  test_mcp_registry.py  test_mcp_servers.py  test_multi_user.py  test_profile.py  test_profile_tools.py  test_retry_model.py  test_telegram_tools.py  test_voice.py
